fix wallet flickering

--- a/app/setup/page.module.css
+++ b/app/setup/page.module.css
@@ -3,4 +3,5 @@
   margin: 0 auto;
   flex-direction: column;
   gap: 36px;
+  height: 100%;
 }
